--- a/resources/theme/_core.scss
+++ b/resources/theme/_core.scss
@@ -206,6 +206,9 @@ paper-tabs {
   &::shadow #selectionBar {
     background-color: $accent;
   }
+  #finesTab {
+    padding: 0 34px;
+  }
   paper-tab {
     .tabTitleNumber {
       margin-bottom: 4px;
