--- a/resources/theme/app.css
+++ b/resources/theme/app.css
@@ -775,6 +775,8 @@ paper-tabs {
   box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2); }
   paper-tabs::shadow #selectionBar {
     background-color: #8db800; }
+  paper-tabs #finesTab {
+    padding: 0 34px; }
   paper-tabs paper-tab .tabTitleNumber {
     margin-bottom: 4px; }
   paper-tabs paper-tab::shadow #ink {
@@ -1343,9 +1345,10 @@ paper-checkbox::shadow #checkbox {
   border-color: #cccccc; }
 
 paper-fab {
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #007e9e; }
   paper-fab:hover {
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #006680;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
   paper-fab.bottom-fixed {
@@ -1356,25 +1359,33 @@ paper-fab {
     color: #ffffff; }
 
 paper-button.colored {
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #007e9e; }
   paper-button.colored:hover {
-    background-color: #006680;
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #006680; }
 
 paper-button[raised].colored {
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
   background: #007e9e;
   color: #ffffff; }
   paper-button[raised].colored:hover {
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #006680;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
   paper-button[raised].colored:active {
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #00566b;
-    box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.3); }
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
   paper-button[raised].colored:disabled {
-    background-color: #FAFAFA;
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #cccccc; }
+
+paper-button[raised] {
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1); }
+  paper-button[raised]:hover {
+    transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
 
 paper-button[disabled] {
   background-color: #FAFAFA;
